@@ -1,5 +1,10 @@
 2010-02-14  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* term/ieee1275/ofconsole.c (grub_ofconsole_readkey): Wait for possible
+	escape sequence after \e.
+
+2010-02-14  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* term/ieee1275/ofconsole.c (grub_ofconsole_putchar): Don't output
 	non-ASCII characters.
 
